<resources>
    <string name="app_name">DBR</string>
    <string name="send_report">Send</string>
    <string name="cancel">Cancel</string>
    <string name="default_title">Send error report</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_credentials">Login credentials</string>
    <string name="report">Report</string>
    <string name="title">Title (subject)</string>
    <string name="text">Description</string>
    <string name="send_failed">Report send failed...</string>
    <string name="invalid_credentials">Invalid login credentials, try again...</string>
    <string name="send_successfull">Report sent succesfully</string>
</resources>
